cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
project( revlines )
add_executable( revlines )
target_sources( revlines PUBLIC ./main.cpp ./FileReadThread.cpp ./FileWriteThread.cpp ./LineReverseThread.cpp)
target_compile_options( revlines PUBLIC -Wall -ggdb -O0 )
target_link_libraries( revlines pthread )
