cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
project( revlines )
add_executable( revlines )
cmake_policy( SET CMP0076 NEW)
target_sources( revlines PUBLIC ./main.cpp ./FileReadThread.cpp ./FileWriteThread.cpp ./LineReverseThread.cpp ./BasicThread.cpp)
target_compile_options( revlines PUBLIC -Wall -ggdb -O0 -std=c++20 )
target_link_libraries( revlines pthread )
